@@ -1,7 +1,12 @@
+Wed Jul 27 07:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/Config_Handlers/STD_IAD_Handler.h:
+          Fixed fuzz error
+
 Tue Jul 26 21:22:45 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * DAnCE/examples/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.h:
-        
+
           Added 'CIDL_' prefix to the scoped name of the exec impl class's
           base class, in the impl class declaration inheritance list. This
           file was overlooked when making similar changes to other exec
@@ -40,7 +45,7 @@ Mon Jul 26 13:54:12 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>
 
         Added new handlers for mapping Config_Handlers::PackageConfiguration to Deployment:PackageConfiguration.
         Updated Config_Handlers.mpc accordingly
-        
+
 Tue Jul 26 12:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/new_RepositoryManager/RMadmin.cpp:
